--- a/burgers-intensive-master/index.html
+++ b/burgers-intensive-master/index.html
@@ -16,17 +16,17 @@
 					<nav class="menu">
 						<ul class="menu-list">
 							<li class="menu-item">
-								<a href="#">Почему у нас</a>
+								<a data-link="why">Почему у нас</a>
 							</li>
 							<li class="menu-item">
-								<a href="#">Меню бургеров</a>
+								<a data-link="products">Меню бургеров</a>
 							</li>
 							<li class="menu-item">
-								<a href="#">Оформление заказа</a>
+								<a data-link="order">Оформление заказа</a>
 							</li>
 						</ul>
 					</nav>
-					<div class="currency" title="Изменить валюту">$</div>
+					<div class="currency" title="Изменить валюту" id="change-currency">$</div>
 				</div>
 			</header>
 
@@ -41,7 +41,7 @@
 							бургеры в городе из отборной мраморной говядины.
 						</p>
 						<div class="main-action">
-							<button class="button">Смотреть меню</button>
+							<button class="btn" id="main-action-button">Смотреть меню</button>
 						</div>
 					</div>
 					<img
@@ -53,7 +53,7 @@
 			</section>
 		</section>
 
-    <section class="why">
+    <section class="why" id="why">
 			<div class="container">
 				<div class="why-title common-title">Почему у нас ?</div>
 				<div class="why-items">
@@ -87,7 +87,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="products">
+		<section class="products" id="products">
 			<div class="container">
 				<div class="products-title common-title">Выберите свой бургер</div>
 				<div class="products-items">
@@ -102,7 +102,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">8 $</div>
+								<div class="products-item-price" data-base-price="8">8 $</div>
 								<div class="products-item-weight">360 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -136,7 +136,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">7 $</div>
+								<div class="products-item-price" data-base-price="7">7 $</div>
 								<div class="products-item-weight">390 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -169,7 +169,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">10 $</div>
+								<div class="products-item-price" data-base-price="10">10 $</div>
 								<div class="products-item-weight">420 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -202,7 +202,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">7 $</div>
+								<div class="products-item-price" data-base-price="7">7 $</div>
 								<div class="products-item-weight">220 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -235,7 +235,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">8 $</div>
+								<div class="products-item-price" data-base-price="8">8 $</div>
 								<div class="products-item-weight">220 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -268,7 +268,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">9 $</div>
+								<div class="products-item-price" data-base-price="9">9 $</div>
 								<div class="products-item-weight">320 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -302,7 +302,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">8 $</div>
+								<div class="products-item-price" data-base-price="8">8 $</div>
 								<div class="products-item-weight">280 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -335,7 +335,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">7 $</div>
+								<div class="products-item-price" data-base-price="7">7 $</div>
 								<div class="products-item-weight">380 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -369,7 +369,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">11 $</div>
+								<div class="products-item-price" data-base-price="11">11 $</div>
 								<div class="products-item-weight">400 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -402,7 +402,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">9 $</div>
+								<div class="products-item-price" data-base-price="9">9 $</div>
 								<div class="products-item-weight">300 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -436,7 +436,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">8 $</div>
+								<div class="products-item-price" data-base-price="8">8 $</div>
 								<div class="products-item-weight">320 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -470,7 +470,7 @@
 						</div>
 						<div class="products-item-extra">
 							<div class="products-items-info">
-								<div class="products-item-price">9 $</div>
+								<div class="products-item-price" data-base-price="9">9 $</div>
 								<div class="products-item-weight">360 гр</div>
 							</div>
 							<div class="products-item-actions">
@@ -496,7 +496,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="order">
+		<section class="order" id="order">
 			<div class="container">
 				<div class="order-title common-title">Оформление заказа</div>
 				<img class="order-image" src="./images/order_image.png" alt="" />
@@ -507,15 +507,15 @@
 					</div>
 					<div class="order-form-inputs">
 						<div class="order-form-input">
-							<input type="text" placeholder="Ваш Заказ" />
+							<input type="text" placeholder="Ваш Заказ" id="burger" />
 						</div>
 						<div class="order-form-input">
-							<input type="text" placeholder="Ваше Имя" />
+							<input type="text" placeholder="Ваше Имя" id="name" />
 						</div>
 						<div class="order-form-input">
-							<input type="text" placeholder="Ваш телефон" />
+							<input type="text" placeholder="Ваш телефон" id="phone"/>
 						</div>
-						<button class="btn">Оформить заказ</button>
+						<button class="btn" id="order-action">Оформить заказ</button>
 					</div>
 				</div>
 			</div>
@@ -528,6 +528,6 @@
 				<div class="rights">Все права защищены</div>
 			</div>
 		</footer>
-
+    <script src="./scripts/script.js"></script>
 	</body>
 </html>
